--- a/1.css
+++ b/1.css
@@ -33,3 +33,15 @@ img{
     border: 4px solid brown;
     border-radius: 15px;
 }
+@media (max-width:786px){
+    #left,#right{
+        width: 75vw;
+        font-size: 5.5vw;}
+        img{
+            width: 70vw;
+        }
+        #top-menu{
+            width: 80vw;
+            font-size: 3.5vw;
+        }
+}
